# look-at-me

./: .gitignore  CMakeLists.txt  Dockerfile  LookAtMe.h.in  README.md
scripts/: install.sh
src/: errors.hpp  main.cpp
